[package]
name = "bevy_tilemap_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_pancam = "0.18.0"
bevy_ecs_tilemap = "0.16.0"
noise = "0.9.0"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"